--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
               </h5>
             </div>
             <h1>
-              <%= @event.title %>
+              <%= @event.decorate.only_woman_check %>
             </h1>
             <% if logged_in? %>
               <div class="ms-auto">
@@ -92,6 +92,10 @@
                               method: :delete,
                               data: { confirm: 'キャンセルします' }
                   %>
+                <% elsif @event.only_woman %>
+                  <% unless current_user.gender == 'woman' %>
+                    <p>このもくもく会は女性限定です</p>
+                  <% end %>
                 <% else %>
                   <%= link_to 'このもくもく会に参加する',
                               event_attendance_url(@event),
